# tw-homedog

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
configs/: buy-3room-parking.yaml  buy-family-daan.yaml  buy-starter-nangang.yaml  rent-daan-elevator.yaml
openspec/changes/add-property-filters-room-bath-year-size/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-07-interactive-listing-browser/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-07-keyword-settings-ux/: design.md  proposal.md  tasks.md
openspec/changes/listing-deduplication-engine/: design.md  proposal.md  tasks.md
openspec/changes/smart-listing-notifier-v1/: design.md  proposal.md  tasks.md
openspec/changes/telegram-map-thumbnail/: design.md  proposal.md  tasks.md
openspec/specs/db-config/: spec.md
openspec/specs/listing-browser/: spec.md
openspec/specs/telegram-bot-handler/: spec.md
src/tw_homedog/: __init__.py  __main__.py  bot.py  config.py  db_config.py  dedup.py  dedup_cleanup.py  log.py  map_preview.py  matcher.py  normalizer.py  notifier.py  regions.py  scraper.py  storage.py  templates.py
tests/: test_bot.py  test_config.py  test_db_config.py  test_dedup.py  test_dedup_cleanup.py  test_integration.py  test_logging.py  test_map_preview.py  test_matcher.py  test_normalizer.py  test_notifier.py  test_regions.py  test_scraper.py  test_storage.py  test_storage_dedup.py  test_storage_favorites.py  test_templates.py
(+25 files in other folders)
